netatmo credentials file has to be writable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     env_file:
       - .env
     volumes:
-    - $HOME/.netatmo.credentials:/root/.netatmo.credentials:ro
+    - $HOME/.netatmo.credentials:/root/.netatmo.credentials
